--- a/prices.html
+++ b/prices.html
@@ -32,7 +32,7 @@
 						</select>
 					</nav>
                 </div>
-                <div class="col-sm-12 col-md-3"><img src="media/logo.png" alt="Logó csavarkulcs kék fogaskeréken belül"></div>
+                <div class="col-sm-12 col-md-3"><img src="media/logo.png" alt="Logó: Kék motor hengerfej szürke fogaskeréken belül."></div>
                 <div class="col-sm-12 col-md-9"><h1 class="title">Rabi Autószerviz és Autómosó</h1></div>
             </div>
             <div class="row">
