--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</select>
 					</nav>
                 </div>
-                <div class="col-sm-12 col-md-3"><img src="media/logo.png" alt="Logó csavarkulcs kék fogaskeréken belül"></div>
+                <div class="col-sm-12 col-md-3"><img src="media/logo.png" alt="Logó: Kék motor hengerfej szürke fogaskeréken belül."></div>
                 <div class="col-sm-12 col-md-9"><h1 class="title">Rabi Autószerviz és Autómosó</h1></div>
             </div>
             <div class="row">
@@ -108,6 +108,7 @@
                     <div class="col-sm-12 col-md-6 video">
                         <video class="ratio ratio-16x9" controls src="media/video_main.mp4" poster="media/video_poster.jpg" width="750">
                         </video>
+                        <a href="transcribe.html">Videó szöveges átirata</a>
                     </div>
                     <div class="col-sm-12 col-md-6">
                         <article>
