--- a/prices.html
+++ b/prices.html
@@ -35,28 +35,24 @@
                 <div class="col-sm-12 col-md-3"><img src="media/logo.png" alt="Logó: Kék motor hengerfej szürke fogaskeréken belül."></div>
                 <div class="col-sm-12 col-md-9"><h1 class="title">Rabi Autószerviz és Autómosó</h1></div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Menü</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                        <a class="nav-link" href="index.html">Főoldal</a>
-                        <a class="nav-link" href="services.html">Szolgáltatások</a>
-                        <a class="nav-link" href="appointment.html">Időpontfoglalás</a>
-                        <a class="nav-link active" aria-current="page" href="prices.html">Árlista</a>
-                        <a class="nav-link" href="contact.html">Elérhetőség</a>
-                        </div>
-                    </div>
-                    </div>
-                </nav>
+        </header>
+        <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Menü</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                <a class="nav-link" href="index.html">Főoldal</a>
+                <a class="nav-link" href="services.html">Szolgáltatások</a>
+                <a class="nav-link" href="appointment.html">Időpontfoglalás</a>
+                <a class="nav-link active" aria-current="page" href="prices.html">Árlista</a>
+                <a class="nav-link" href="contact.html">Elérhetőség</a>
                 </div>
             </div>
-        </header>
+            </div>
+        </nav>
         <div class="content">
             <main id="text">
                 <h2>Gumiszerelés áraink</h2>
