--- a/appointment.html
+++ b/appointment.html
@@ -27,7 +27,7 @@
 						<label for="styleSwitcher">Stílus: </label>
 						<select id="styleSwitcher">
 							<option value="normal">Normál</option>
-							<option value="large">Nagy betűméret</option>
+							<option value="large">Gyengénlátó</option>
 						</select>
 					</nav>
                 </div>
@@ -35,7 +35,7 @@
                 <div class="col-sm-12 col-md-9"><h1 class="title">Rabi Autószerviz és Autómosó</h1></div>
             </div>
         </header>
-        <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light">
+        <nav id="nav" class="navbar navbar-expand-md sticky-top navbar-light bg-light">
             <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Menü</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
