--- a/prices.html
+++ b/prices.html
@@ -28,7 +28,7 @@
 						<label for="styleSwitcher">Stílus: </label>
 						<select id="styleSwitcher">
 							<option value="normal">Normál</option>
-							<option value="large">Nagy betűméret</option>
+							<option value="large">Gyengénlátó</option>
 						</select>
 					</nav>
                 </div>
@@ -36,7 +36,7 @@
                 <div class="col-sm-12 col-md-9"><h1 class="title">Rabi Autószerviz és Autómosó</h1></div>
             </div>
         </header>
-        <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light">
+        <nav id="nav" class="navbar navbar-expand-md sticky-top navbar-light bg-light">
             <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Menü</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,6 +56,7 @@
         <div class="content">
             <main id="text">
                 <h2>Gumiszerelés áraink</h2>
+                <div class="table-container">
                 <table class="table table-hover">
                     <caption class="text-centered">
                         <details>
@@ -109,6 +110,7 @@
                         <td>12 000 Ft.-</td>
                     </tr>
                 </table>
+                </div>
                 <p class="hidden">Díjaink átszereléseknél és centrírozásnál 4 kerék esetén:<br> (Egy kerék díja) * 4 * 0.9</p>
                 <aside><p>Az árak az ÁFÁ-t tartalmazzák.</p></aside>
             </main>
