--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<label for="styleSwitcher">Stílus: </label>
 						<select id="styleSwitcher">
 							<option value="normal">Normál</option>
-							<option value="large">Nagy betűméret</option>
+							<option value="large">Gyengénlátó</option>
 						</select>
 					</nav>
                 </div>
@@ -34,7 +34,7 @@
                 <div class="col-sm-12 col-md-9"><h1 class="title">Rabi Autószerviz és Autómosó</h1></div>
             </div>
         </header>
-        <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light">
+        <nav id="nav" class="navbar navbar-expand-md sticky-top navbar-light bg-light">
             <div class="container-fluid">
             <div class="navbar-logo"><imgx0 src="media/logo.png" alt="Logó: Kék motor hengerfej szürke fogaskeréken belül."></div>
             <a class="navbar-brand" href="index.html">Menü</a>
